<resources>
    <string name="app_name">PROVA</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="plastic_precios">PLASTIC PRECIOS</string>
    <string name="logo">logo</string>
    <string name="login2">LOGIN</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="submit">SUBMIT</string>
</resources>